Fixes #253 Menu height breaks at window size < 992

--- a/files/static/less/navbar.less
+++ b/files/static/less/navbar.less
@@ -78,6 +78,8 @@ nav.subnavbar {
     margin-bottom: 0;
 }
 
+
+
 @media (max-width: 767px) {
     .subnavbar                      { display: none; }
     .subnavbar  + section           { padding: 52px 0 0 0; }
@@ -94,6 +96,14 @@ nav.subnavbar {
     }
     .navbar-nav {
         margin-top: 0;
+    }
+}
+
+@media (max-width: 992px) {
+    nav.navbar ul.nav.navbar-nav > li >  a {
+        padding-left: 5px;
+        padding-right: 5px;
+        font-size: 12px;
     }
 }
 
